--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -2,11 +2,7 @@
 *
 	font-family: 'Source Sans Pro', sans-serif
 
-.red
-	color: #e00
 
-.width100
-	width: 100%
 html
 	height: 100%
 	body
@@ -108,3 +104,12 @@ html
 			.container
 				&.main
 					padding: 15px
+
+
+/* Useful */
+.red
+	color: #e00
+.width100
+	width: 100%
+.marginleft45
+	margin-left: 45px
