--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -1,4 +1,5 @@
 @import "../variables"
+@import "../mixins"
 .finish_app
 	margin: 0 0 20px 0
 	float: right
@@ -19,7 +20,7 @@
 
 	form
 		.edit_student_application_flex
-			display: flex
+			@include flexBoxVendor
 			flex-wrap: wrap
 			min-height: 450px
 			align-content: start
@@ -34,6 +35,8 @@
 				flex: 1 0 23%
 			.field50
 				flex: 1 0 48%
+				input
+					max-width: 390px
 			.field100
 				flex: 1 0 100%
 				input, textarea
@@ -54,19 +57,20 @@
 			padding-left: 0px !important
 			flex-grow: 1
 			.flex-container
-				display: flex
+				@include flexBoxVendor
 				align-items: center
 				label
 					width: 130px
 					padding-right: 12px
 					line-height: 1em
 					text-align: right
+					flex-shrink: 0
 				.checkBox
 					text-align: left
 					width: auto
 					padding-left: 12px
-					padding-right: 0
-				input, select
+					padding-right: 12px
+				input:not([type="radio"]), select
 					flex-grow: 1
 		.field_inst_sending_name
 			width: calc(50% - 25px)
@@ -92,22 +96,26 @@
 			padding: 15px
 		.lang, .work
 			border-bottom: 1px solid grey
-			display: flex
+			@include flexBoxVendor
 			flex-wrap: wrap
 			align-items: center
 			background-color: #edf2f6
 			padding: 0 15px 0 0
+			position: relative
 			.field
 				input:not([type="submit"])
 					width: auto
 				select
-					width: 220px
+					width: 195px
 				label
 					width: 80px
 
 			.delete-lang-button, .delete-work-button
 				vertical-align: middle
 				transition: 0.2s all ease-in
+				position: absolute
+				right: 10px
+				top: 10px
 				&:hover
 					transform: scale(1.2)
 		.lang:last-child, .work:last-child
@@ -179,7 +187,7 @@
 			.lang, .work
 				padding-bottom: 10px
 				border-bottom: 1px solid grey
-				display: flex
+				@include flexBoxVendor
 				flex-direction: column
 				align-items: flex-start
 				.field
