--- a/app/views/student_application_form/_sixth_step.erb
+++ b/app/views/student_application_form/_sixth_step.erb
@@ -24,7 +24,7 @@
     <%= f.text_field :specialization_area, autofocus: true, autocomplete: "specialization_area", disabled: review %>
   </div>
 </div>
-<div class="field">
+<div class="field marginleft45">
   <div class="flex-container">
     <%= f.check_box :already_study_abroad, autofocus: true, autocomplete: "already_study_abroad", disabled: review %>
     <%= f.label :already_study_abroad, "Already been studying abroad?",class: "checkBox" %><br />
