Comment email filter + styles & structure changes

--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -56,10 +56,10 @@
         <label class="label">Name </label>
         <input name="name" placeholder="Find by name" value="<%=params[:name]%>"/>
       </div>
-      <div class="field filter">
+<!--      <div class="field filter">
         <label class="label">Email </label>
-        <input name="email" placeholder="Find by name" value="<%=params[:email]%>"/>
-      </div>
+        <input name="email" placeholder="Find by name" value="<%#=params[:email]%>"/>
+      </div>-->
 
       <input type="submit" class="custom-button primary" value="Search"/>
 
