Born_place enable field

--- a/app/views/student_application_form/personal_data_step.html.erb
+++ b/app/views/student_application_form/personal_data_step.html.erb
@@ -25,6 +25,12 @@
       <%= f.date_field :birth_date, autofocus: true, autocomplete: "bday" %>
     </div>
 
+      <div class="field">
+        <%= f.label :born_place %><br />
+        <%= f.text_field :born_place, autofocus: true, autocomplete: "bornplace" %>
+      </div>
+
+
     <div class="field">
       <%= f.label :nationality %><br />
       <%= f.select :nationality, country_list, autocomplete: "country-name" %>
