Welcome email fixes & remember register in LogIn page

--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -471,7 +471,7 @@ background-image: url(https://i1.createsend1.com/ei/j/2D/FF9/768/194359/csfinal/
             
               <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-        <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>Welcome to ESTIT-UPM</strong></font></span></h1>
+        <h1 class="size-64" style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #000;font-size: 44px;line-height: 50px;font-family: avenir,sans-serif;text-align: center;" lang="x-size-64"><span class="font-avenir"><font color="#ffffff"><strong>E-nominated to ESTIT-UPM</strong></font></span></h1>
       </div>
     </div>
             
@@ -514,6 +514,12 @@ background-image: url(https://i1.createsend1.com/ei/j/2D/FF9/768/194359/csfinal/
 
         <span style="color:#18527c"><strong>In order to submit your application you must register in the ETSIT Erasmus platform. Follow this link: </strong></span>
         <a style="color: #4664A2;text-decoration: none;" href="<%= @nominee_url %>"><%= @nominee_url %></a>.</h2>
+        <br/>
+        <br/>
+
+        <p class="size-18" style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #18527c;font-size: 12px;line-height: 26px;font-family: Avenir,sans-serif;text-align: center;" lang="x-size-18">
+        Keep in mind that the deadline to receive application packages is June, 1st for the fall semester or academic year 2018-19, and December, 1st for the second semester. Please check registered users, documents required in pdf, and application packages before the deadline .
+        </p>
       </div>
     </div>
         
