Layout remember password page

--- a/app/assets/stylesheets/login/home.sass
+++ b/app/assets/stylesheets/login/home.sass
@@ -12,6 +12,18 @@
 	.signin-container
 		justify-content: center
 		padding: 40px
+	.password-container
+		justify-content: flex-start
+		align-items: center
+		padding: 25px
+		.field
+			flex-grow: 0
+			label
+				width: auto
+		.actions
+			a
+				padding: 15px
+
 	.flex-left-new
 		flex: 1
 		text-align: right
