--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,18 @@
-<h2>Forgot your password?</h2>
+<h1 class="title">Forgot your password?</h1>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
-
+  <div class="flex-container password-container">
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions", :class => "custom-button" %>
+    <%= f.submit "Send me reset password instructions", :class => "custom-button primary" %>
+    <%= render "devise/shared/links"%>
+  </div>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
