Re-thinking steps when editing

--- a/app/assets/stylesheets/student_application_form/form.sass
+++ b/app/assets/stylesheets/student_application_form/form.sass
@@ -125,10 +125,12 @@
 				width: 40%
 		.lang-list
 			margin: 20px 0
-.back-to-dashboard
+
+.back-save-dashboard
 	display: inline-block
-	width: 100%
 	margin-bottom: -10px
+
+
 @media (max-width: 600px)
 	.student-application-form
 		form
