--- a/app/views/student_application_form/personal_data_step.html.erb
+++ b/app/views/student_application_form/personal_data_step.html.erb
@@ -1,11 +1,15 @@
-<div class="align-right">
-<a href="<%=user_dashboard_path%>" class="back-to-dashboard"><button class='custom-button primary right'>Dashboard</button></a>
 
-</div>
 <div class="student-application-form">
 
   <%= form_for(@user, url: student_application_form_personal_data_path, method: :post) do |f| %>
-
+    <div class="align-right">
+      <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
+        <button class='custom-button right'>Close</button>
+      </a>
+      <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
+        <button class='custom-button primary right'>Save & Close</button>
+      </a>
+    </div>
    <h1>Student Application Form <span class="fake-arrow" > > </span>  </h1><h2 class="form-subtitle">Personal data</h2></br>
 <!--    <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
     <%= devise_error_messages! %>
