Personal data percentage

--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -9,7 +9,7 @@
 
 
 <% users = User.where("lower(first_name) LIKE ?", like_name.downcase).joins(:student_application_form).merge( StudentApplicationForm.where("lower(academic_year) LIKE ? and lower(inst_sending_name) LIKE ?", like_period.downcase, like_university.downcase)).reject{|t| t.role == "admin"} %>
-<% binding.pry %>
+<% #binding.pry %>
 <% unless params[:progress_state].blank? %>
   <%users.reject!{|t| t.progress_status_before_type_cast != params[:progress_state].to_i}%>
 <% end %>
