--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -3,12 +3,12 @@
 <%= button_to "Log out", destroy_user_session_path, :method=> :delete, :class => "custom-button ", :form_class =>"inline"%>
 </div>
 <%# like_email = "%#{ params[:email]}%"    %>
-<% like_name = "%#{ params[:name]}%"    %>
+<% like_name = "%#{  I18n.transliterate(params[:name])}%"    %>
 <% like_period = "%#{ params[:period]}%"    %>
-<% like_university = "%#{ params[:university]}%"    %>
+<% like_university = "%#{ I18n.transliterate(params[:university])}%"    %>
 
-
-<% users = User.where("lower(first_name) LIKE ?", like_name.downcase).joins(:student_application_form).merge( StudentApplicationForm.where("lower(academic_year) LIKE ? and lower(inst_sending_name) LIKE ?", like_period.downcase, like_university.downcase)).reject{|t| t.role == "admin"} %>
+<% users = User.where("lower(unaccent(first_name)) LIKE ? or lower(unaccent(family_name)) LIKE ?", 
+ like_name.downcase,  like_name.downcase).joins(:student_application_form).merge( StudentApplicationForm.where("lower(academic_year) LIKE ? and lower(unaccent(inst_sending_name)) LIKE ?", like_period.downcase, like_university.downcase)).reject{|t| t.role == "admin"} %>
 <% #binding.pry %>
 <% unless params[:progress_state].blank? %>
   <%users.reject!{|t| t.progress_status_before_type_cast != params[:progress_state].to_i}%>
