conditional buttons (doing)

--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -15,9 +15,10 @@
     transition: 0.2s all ease-in
     max-height: 40px
     &:disabled
-        color: grey
+        color: #9fa8b0
+        border-color: #9fa8b0
         cursor: not-allowed
-        border-color: grey
+
         &:hover
             transform: scale(1)
     &:hover
