--- a/app/views/student_application_form/review_student_application_form.html.erb
+++ b/app/views/student_application_form/review_student_application_form.html.erb
@@ -1,5 +1,5 @@
 <div class="align-right">
-<a href="<%="/review_dashboard/#{params[:user]}"%>" class="back-to-dashboard"><button class='custom-button primary'> Dashboard</button></a>
+<a href="<%="/review_dashboard/#{params[:user]}"%>" class="back-to-dashboard"><button class='custom-button primary'> Close</button></a>
 
 </div>
 <div class="student-application-form">
@@ -40,9 +40,9 @@
             <%if params[:step].to_i + 1 < 7 %>
                 <%= link_to "<button  class='custom-button'> Next > </button>".html_safe, "/review_student_application_form/#{params[:user]}" + "/#{params[:step].to_i + 1}"%>
             <%end%>
-            <%if params[:step].to_i == 6 %>
-                <%= link_to "<button  class='custom-button primary'> Finish </button>".html_safe, "/review_dashboard/#{params[:user]}" %>
-            <%end%>
+            <%#if params[:step].to_i == 6 %>
+                <%#= link_to "<button  class='custom-button primary'> Finish </button>".html_safe, "/review_dashboard/#{params[:user]}" %>
+            <%#end%>
         </div>
         </br>
         </br>
