--- a/app/views/student_application_form/student_application_form.html.erb
+++ b/app/views/student_application_form/student_application_form.html.erb
@@ -1,21 +1,21 @@
-<div class="align-right">
 
-  <% if params.has_key?(:from_ball) %>
-    <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
-      <button class='custom-button right'>Close</button>
-    </a>
-    <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
-      <button class='custom-button primary right'>Save & Close</button>
-    </a>
-
-  <% end %>
-</div>
 <% id = "form-step-#{@sap.step}"   %>
 <div class="student-application-form">
     <%= form_for @sap, url: student_application_form_path, :html => { :id => id}, :method => :post do |f| %>
+    <div class="align-right">
+
+      <% if params.has_key?(:from_ball) %>
+        <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
+          <button class='custom-button right'>Close</button>
+        </a>
+
+        <button type="submit" value="0" class='custom-button primary right'>Save & Close</button>
+
+      <% end %>
+    </div>
     <h1>Student Application Form <span class="fake-arrow" > > </span>  </h1>
 
-	  <%= render partial: "student_application_form/#{toNumeral(@sap.step)}_step", :locals =>{ :f=> f, :sap => @sap, :review => false} %>
+	  <%= render partial: "student_application_form/#{toNumeral(@sap.step)}_step" , :locals =>{ :f=> f, :sap => @sap, :review => false} %>
     <% final_steps_array = @sap.completed_steps_array  %>
   <div class="action-buttons">
     <div class="progress-bar">
@@ -51,9 +51,6 @@
             <button type="submit" value="0" name="step"  class='custom-button primary'> Finish</button>
         <%end%>
     </div>
-    </br>
-    </br>
-    </br>
   </div>
    <%end%>
 </div>
