Refactor dynamic forms

--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -13,6 +13,7 @@
 	.close
 		margin: -18px
 	.flex-container
+		display: flex
 		.image-container
 			display: inline-block
 			.picture
@@ -21,6 +22,7 @@
 			display: inline-block
 			vertical-align: top
 			padding: 10px
+			flex: 1
 			.input-file
 			.custom-button
 				margin: 10px
@@ -108,6 +110,7 @@
 			transition: 0.2s all ease-in
 			&:hover
 				transform: scale(1.07)
+			
 	.right-column
 		flex-grow: 7
 		.row
